--- a/package.json
+++ b/package.json
@@ -19,6 +19,14 @@
   "homepage": "https://github.com/wellsinator/skillsource#readme",
   "dependencies": {},
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.9",
+    "nodemon": "^1.14.12",
+    "style-loader": "^0.20.1",
     "webpack": "^3.11.0"
   }
 }
