--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "skillsource",
   "version": "1.0.0",
-  "description": "",
+  "description": "skillsource",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack --watch | nodemon server/index.js"
   },
   "repository": {
     "type": "git",
