--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.9",
+    "html-webpack-plugin": "^2.30.1",
     "nodemon": "^1.14.12",
     "style-loader": "^0.20.1",
     "webpack": "^3.11.0"
