--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "express": "^4.16.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react-router-dom": "^4.2.2"
+    "react-router-dom": "^4.2.2",
+    "sequelize": "^4.33.4"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
