--- a/.gitignore
+++ b/.gitignore
@@ -63,5 +63,5 @@ client/dist/*
 # Random file from OSX
 client/src/.DS_Store
 
-# config file with db variables
+# config variables
 config/config.js
