--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
   "homepage": "https://github.com/skillsource/skillsource#readme",
   "dependencies": {
     "axios": "^0.17.1",
+    "cors": "^2.8.4",
     "express": "^4.16.2",
+    "express-jwt": "^5.3.0",
+    "jquery": "^3.3.1",
+    "jsonwebtoken": "^8.1.1",
+    "jwt-decode": "^2.2.0",
     "mysql2": "^1.5.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -30,6 +35,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.9",
