--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
+    "react-stars": "^2.2.5",
     "sequelize": "^4.33.4"
   },
   "devDependencies": {
