Add some design elements to discussion board/comments.

--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.1.1",
     "jwt-decode": "^2.2.0",
+    "moment": "^2.21.0",
     "mysql2": "^1.5.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-moment": "^0.7.0",
     "react-router-dom": "^4.2.2",
     "react-star-rating-component": "^1.4.0",
     "sequelize": "^4.33.4"
