Embed youtube videos in steps.

--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "react-moment": "^0.7.0",
     "react-router-dom": "^4.2.2",
     "react-star-rating-component": "^1.4.0",
-    "sequelize": "^4.33.4"
+    "react-url": "^1.0.1",
+    "sequelize": "^4.33.4",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
