--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jwt-decode": "^2.2.0",
     "moment": "^2.21.0",
     "mysql2": "^1.5.2",
+    "nodemailer": "^4.6.3",
     "pssg": "^0.2.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
